--- a/app/src/main/res/layout/single_list_view.xml
+++ b/app/src/main/res/layout/single_list_view.xml
@@ -1,70 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:orientation="horizontal"
-    android:padding="16dp">
+    android:layout_height="wrap_content"
+    android:padding="6dp">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
 
         <TextView
             android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
             android:fontFamily="sans-serif-medium"
-            android:maxLines="1"
             android:textAllCaps="true"
             android:textColor="@color/Title"
             android:textSize="12sp"
             tools:text="great wall of india" />
 
-        <TextView
-            android:id="@+id/Discription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:textColor="@color/dicription"
-            android:textSize="16sp"
-            tools:text="Long placeholder location that should wrap to more than 2 lines of text" />
-
-    </LinearLayout>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/Discription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:orientation="vertical">
+        android:layout_alignParentBottom="false"
+        android:layout_below="@+id/Title"
+        android:textColor="@color/dicription"
+        android:textSize="16sp"
+        tools:text="PILITICS" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
             android:textColor="@color/dicription"
             android:textSize="12sp"
+            android:layout_below="@+id/Title"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="6dp"
             tools:text="Mar 6, 2010" />
 
         <TextView
             android:id="@+id/TIme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_below="@+id/date"
+            android:layout_alignParentEnd="true"
             android:textColor="@color/dicription"
             android:textSize="12sp"
             tools:text="3:00 PM" />
 
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
