--- a/app/src/main/res/layout/single_list_view.xml
+++ b/app/src/main/res/layout/single_list_view.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="6dp">
+    android:padding="6dp"
+    android:background="#ECE07E">
 
 
         <TextView
@@ -12,7 +13,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:textAllCaps="true"
-            android:textColor="@color/Title"
+            android:textColor="#36434E"
             android:textSize="12sp"
             tools:text="great wall of india" />
 
@@ -22,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="false"
         android:layout_below="@+id/Title"
-        android:textColor="@color/dicription"
+        android:textColor="#4D759E"
         android:textSize="16sp"
         tools:text="PILITICS" />
 
@@ -30,7 +31,7 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/dicription"
+            android:textColor="#4D759E"
             android:textSize="12sp"
             android:layout_below="@+id/Title"
             android:layout_alignParentEnd="true"
@@ -43,8 +44,17 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/date"
             android:layout_alignParentEnd="true"
-            android:textColor="@color/dicription"
+            android:textColor="#4D759E"
             android:textSize="12sp"
             tools:text="3:00 PM" />
+    <TextView
+        android:drawableStart="@drawable/ic_open_in_new_black_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/for_more_info_click_here"
+        android:textSize="15sp"
+        android:textColor="#C003A9F4"
+        android:layout_below="@+id/Discription"
+        />
 
 </RelativeLayout>
