--- a/app/src/main/res/layout/single_list_view.xml
+++ b/app/src/main/res/layout/single_list_view.xml
@@ -8,6 +8,7 @@
 
 
         <TextView
+            android:drawableLeft="@drawable/ic_show_chart_black_24dp"
             android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
