--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FBC627</color>
-    <color name="colorPrimaryDark">#FFC107</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#0B0B0A</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#FFC107</color>
     <color name="dicription">#B4BAC0</color>
     <color name="Title">#2B3D4D</color>
 
